--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,265 @@
 @charset "UTF-8";
 
+/* resume-summary start */
+.resume-summary {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: #188eee url("http://coding.imweb.io/img/project/resume/bg.png") repeat ;
+    color: #fff;
+}
+.resume-summary .summary-hd {
+    margin-bottom: 20px;
+    text-align: center;
+    
+}
+.resume-summary .resume-avatar {
+    margin: 10px;
+    width: 110px;
+    height: 110px;
+    background: #fff;
+    box-shadow: 0 0 0 5px rgba(255,255,255, 0.3);
+    border-radius: 50%;
+}
+.resume-summary .resume-avatar:hover {
+    animation: shadow 1s infinite;
+}
+@keyframes shadow {
+    0% {
+        box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.3);
+    }
+    50% {
+        box-shadow: 0 0 10px 6px rgba(255, 255, 255, 0.3);
+    }
+    100% {
+        box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.3);
+    }
+}
+.resume-summary .resume-user {
+    line-height: 1.5;
+    font-size: 18px;
+}
+.resume-summary .resume-text {
+    margin: 10px;
+    line-height: 1.5;
+    font-size: 14px;
+}
+.resume-summary .resume-info {
+    margin-bottom: 20px;
+}
+.resume-summary .info-item {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    line-height: 20px;
+    font-size:14px;
+}
+.resume-summary .info-icon {
+    position: relative;
+    margin-right: 10px;
+    width: 14px;
+    height: 14px;
+}
+.resume-summary .info-icon::after {
+    position: absolute;
+    top: -4px;
+    left:-4px;
+    content: "";
+    width: 20px;
+    height: 20px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+}
+.resume-summary .summary-ft {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 40px;
+    padding: 5px 20px 5px 5px;
+    width: 298px;
+    border: 1px solid #0e6ab8;
+    border-radius: 5px;
+    box-shadow: 0 0 0 1px #2b9eff;
+    line-height: 2;
+    font-size: 12px;
+}
+/* resume-summary end */
+
+/* resume-main start */
+.resume-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+}
+.resume-main .resume-topic {
+    position: relative;
+    text-align: center;
+    font-size: 16px;
+    color: #188eee; 
+}
+.resume-main .resume-topic::before {
+    content: "";
+    width: calc(50% - 40px);
+    height: 100%;
+    background-image: linear-gradient(#f5f5f5, #f5f5f5);
+    background-repeat: no-repeat;
+    background-size: 100% 2px;
+    position:  absolute;
+    top: 50%;
+    left: 0;
+}
+.resume-main .resume-topic::after {
+    content: "";
+    width: calc(50% - 40px);
+    height: 100%;
+    background-image: linear-gradient(#f5f5f5, #f5f5f5);
+    background-repeat: no-repeat;
+    background-size: 100% 2px;
+    position:  absolute;
+    top: 50%;
+    right: 0;
+}
+
+/* work list */
+.resume-main .work-list {
+    position: relative;
+    padding: 0 15px 0 30px;
+}
+.resume-main .work-list::before {
+    content: "";
+    width: 5px;
+    background: linear-gradient(to bottom, #ccc 80%, transparent) no-repeat;
+    background-size: 1px 100%; 
+
+    position: absolute;
+    top: 12px;
+    left: 15px;
+    bottom: 0;
+
+}
+.resume-main .work-item {
+    position: relative;
+    margin-bottom: 20px;
+}
+.resume-main .work-item:last-child {
+    margin-bottom: 0px;
+}
+.resume-main .work-item::before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #188eee;
+    box-shadow: 0 0 0 3px rgba(24, 142, 238, .2);
+    position: absolute;
+    top: 10px;
+    left:-20px; 
+}
+.resume-main .work-item:hover::before {
+    animation: spread 1s infinite;
+}
+@keyframes spread {
+    0% {
+        box-shadow: 0 0 1px 1px rgba(24, 142, 238, 0.2);
+    }
+    50% {
+        box-shadow: 0 0 5px 5px rgba(24, 142, 238, 0.2);
+    }
+    100% {
+        box-shadow: 0 0 1px 1px rgba(24, 142, 238, 0.2);
+    }
+}
+.resume-main .work-company {
+    margin-bottom: 10px;
+}
+.resume-main .resume-desc {
+    font-size: 12px;
+    color: #999;
+}
+
+/* skill list */
+.resume-main .skill-list {
+    margin: 15px;
+    padding-right: 15px;
+}
+.resume-main .skill-item {
+    margin-bottom: 20px;
+}
+.resume-main .skill-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+.resume-main .skill-degree {
+    padding: 1px 8px;
+    color: #999;
+    border: 2px solid #f5f5f5;
+    border-radius: 30px;
+    transform: scale(0.8);
+}
+.resume-main .skill-desc {
+    margin-bottom: 10px;
+    font-size: 12px;
+    color: #999;
+}
+.resume-main .skill-bar {
+    position: relative;
+    height: 5px;
+    width: 100%;
+    background-color: #ccc;
+    border-radius: 3px;
+}
+.resume-main .bar-percent {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #188eee;
+    border-radius: 3px;
+    transform-origin: left top;
+}
+.skill-item:nth-of-type(1) .skill-bar .bar-percent {
+    transform: scaleX(0.3);
+    
+}
+.skill-item:nth-of-type(2) .skill-bar .bar-percent {
+    transform: scaleX(0.9);
+}
+.skill-item:nth-of-type(3) .skill-bar .bar-percent {
+    transform: scaleX(0.5);
+}
+.skill-item:hover .bar-percent {
+    animation: bar 2s backwards;
+}
+@keyframes bar {
+    0% {
+        transform: scaleX(0);
+    }
+}
+
+@media (min-width: 768px) {
+    .page-resume {
+        display: flex;
+    }
+    .resume-summary,
+    .resume-main {
+        flex: 1;
+    }
+    .resume-main {
+        margin-left: 20px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
